add german data, update label

--- a/gender-of-parliament.ipynb
+++ b/gender-of-parliament.ipynb
@@ -132,7 +132,7 @@
     "plt.bar(years, female_percentages)\n",
     "plt.ylim(0, 100)\n",
     "plt.grid()\n",
-    "plt.title(\"% of members with female gender\")\n",
+    "plt.title(\"% of members with female gender in Dutch parlement (2e kamer)\")\n",
     "plt.ylabel(\"% female\")\n",
     "plt.xlabel(\"year\")\n",
     "plt.show()\n"
