adding visuals for germany

--- a/age-of-tweede-kamer.ipynb
+++ b/age-of-tweede-kamer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "1a3cd2ff-1907-4a1e-96c8-0ebf91c43891",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "b37340bd-e261-45aa-a34c-02c2c6d52c61",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "3c70b944-fb4b-4a1c-8bc2-4965c934646d",
    "metadata": {},
    "outputs": [],
@@ -95,11 +95,14 @@
     "        if start_date <= current_date <= end_date:\n",
     "            date_of_birth = datetime.strptime(m[\"dob\"], '%Y-%m-%dT%H:%M:%SZ')\n",
     "            age = calc_age(date_of_birth, current_date)\n",
+    "                \n",
+    "            if not year in members_at_year:\n",
+    "                members_at_year[year] = []\n",
     "            \n",
-    "            if year in members_at_year:\n",
+    "            if start_date <= current_date <= end_date:\n",
+    "                date_of_birth = datetime.strptime(m[\"dob\"], '%Y-%m-%dT%H:%M:%SZ')\n",
+    "                age = calc_age(date_of_birth, current_date)\n",
     "                members_at_year[year].append(age)\n",
-    "            else:\n",
-    "                members_at_year[year] = [age] \n",
     "\n",
     "average_age_members=[]\n",
     "\n",
@@ -110,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "a8495f50-5db0-4f69-b95d-c1febe6ebe14",
    "metadata": {},
    "outputs": [],
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "2c083ec1",
    "metadata": {},
    "outputs": [
