document code with copilot

--- a/age-of-tweede-kamer.ipynb
+++ b/age-of-tweede-kamer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1a3cd2ff-1907-4a1e-96c8-0ebf91c43891",
    "metadata": {},
    "outputs": [],
@@ -56,19 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "b37340bd-e261-45aa-a34c-02c2c6d52c61",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_age(birthdate, at_date):\n",
+    "    # Check that birthdate is earlier than at_date\n",
+    "    if birthdate > at_date:\n",
+    "        raise ValueError('birthdate must be earlier than at_date')\n",
+    "    # Calculate age\n",
     "    age = at_date.year - birthdate.year - ((at_date.month, at_date.day) < (birthdate.month, birthdate.day))\n",
     "    return age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3c70b944-fb4b-4a1c-8bc2-4965c934646d",
    "metadata": {},
    "outputs": [],
@@ -77,32 +81,37 @@
     "members = json.load(file)\n",
     "file.close()\n",
     "\n",
-    "years = range(1850, 2022)\n",
-    "\n",
-    "members_at_year = dict()\n",
-    "    \n",
-    "for year in years:\n",
+    "def get_members_at_year(members, year):\n",
+    "    \"\"\"Returns a list of ages of all members at the given year.\"\"\"\n",
+    "    members_at_year = []\n",
     "    for m in members:\n",
-    "        current_date = datetime(year, 1, 1)\n",
-    "        start_date = datetime.strptime(m[\"start\"], '%Y-%m-%dT%H:%M:%SZ')\n",
-    "        if \"end\" in m:\n",
-    "            end_date = datetime.strptime(m[\"end\"], '%Y-%m-%dT%H:%M:%SZ')\n",
-    "        else:\n",
-    "            # fallback end date, assume member will be out of office after 4 years\n",
-    "            today = datetime.today()\n",
-    "            end_date = datetime(today.year + 4, today.month, today.day)\n",
-    "        \n",
-    "        if start_date <= current_date <= end_date:\n",
-    "            date_of_birth = datetime.strptime(m[\"dob\"], '%Y-%m-%dT%H:%M:%SZ')\n",
-    "            age = calc_age(date_of_birth, current_date)\n",
-    "                \n",
-    "            if not year in members_at_year:\n",
-    "                members_at_year[year] = []\n",
+    "        try:\n",
+    "            current_date = datetime(year, 1, 1)\n",
+    "            start_date = datetime.strptime(m[\"start\"], '%Y-%m-%dT%H:%M:%SZ')\n",
+    "            end_date = None\n",
+    "            if \"end\" in m:\n",
+    "                end_date = datetime.strptime(m[\"end\"], '%Y-%m-%dT%H:%M:%SZ')\n",
+    "            else:\n",
+    "                # fallback end date, assume member will be out of office after 4 years\n",
+    "                today = datetime.today()\n",
+    "                end_date = datetime(today.year + 4, today.month, today.day)\n",
     "            \n",
     "            if start_date <= current_date <= end_date:\n",
-    "                date_of_birth = datetime.strptime(m[\"dob\"], '%Y-%m-%dT%H:%M:%SZ')\n",
-    "                age = calc_age(date_of_birth, current_date)\n",
-    "                members_at_year[year].append(age)\n",
+    "                try:\n",
+    "                    date_of_birth = datetime.strptime(m[\"dob\"], '%Y-%m-%dT%H:%M:%SZ')\n",
+    "                    age = calc_age(date_of_birth, current_date)\n",
+    "                    members_at_year.append(age)\n",
+    "                except ValueError:\n",
+    "                    print('Invalid date of birth: ' + m[\"dob\"])\n",
+    "        except ValueError:\n",
+    "            print('Invalid date: ' + m[\"start\"] + ' or ' + m[\"end\"])\n",
+    "    return members_at_year\n",
+    "\n",
+    "years = range(1850, 2022)\n",
+    "members_at_year = dict()\n",
+    "\n",
+    "for year in years:\n",
+    "    members_at_year[year] = get_members_at_year(members, year)\n",
     "\n",
     "average_age_members=[]\n",
     "\n",
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "a8495f50-5db0-4f69-b95d-c1febe6ebe14",
    "metadata": {},
    "outputs": [],
@@ -124,6 +133,12 @@
     "\n",
     "prime_minister_ages = []\n",
     "    \n",
+    "\n",
+    "# This code is used to find the ages of all of the prime ministers that served during a given year.\n",
+    "# The code loops through every year in the list of years, and then loops through every minister\n",
+    "# in the list of ministers. For each minister, the code checks to see if they served during the\n",
+    "# current year. If they did, the code will then check to see if they have a date of birth. If they\n",
+    "# do, it will calculate their age and add it to the list of prime minister ages.\n",
     "for year in years:\n",
     "    for m in ministers:\n",
     "        current_year = datetime(year, 1, 1)\n",
@@ -131,14 +146,17 @@
     "        end_date = datetime.strptime(m[\"end\"], '%Y-%m-%dT%H:%M:%SZ')\n",
     "        \n",
     "        if start_date <= current_year <= end_date:\n",
-    "            date_of_birth = datetime.strptime(m[\"dob\"], '%Y-%m-%dT%H:%M:%SZ')\n",
-    "            age = calc_age(date_of_birth, current_year)\n",
-    "            prime_minister_ages.append(age)"
+    "            try:\n",
+    "                date_of_birth = datetime.strptime(m[\"dob\"], '%Y-%m-%dT%H:%M:%SZ')\n",
+    "                age = calc_age(date_of_birth, current_year)\n",
+    "                prime_minister_ages.append(age)\n",
+    "            except ValueError:\n",
+    "                pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "2c083ec1",
    "metadata": {},
    "outputs": [
